--- a/index.html
+++ b/index.html
@@ -462,44 +462,91 @@ function openCalc(p) {
 
 // --- ٥. دكتور ديكور (AI) ---
 async function handleDrImage(input) {
-    if (!input.files || !input.files[0]) return;
+    // 1. التحقق الأولي من وجود ملف
+    if (!input || !input.files || !input.files[0]) return;
+
     const box = document.getElementById('aiResponse');
     const avatar = document.getElementById('drAvatar');
     const status = document.getElementById('drStatus');
+
+    // 2. تهيئة الواجهة لبدء التحليل
     if(avatar) avatar.src = "https://i.ibb.co/ZzMvg7Mz/Disgust-removebg-preview.png";
     status.innerText = "دكتور ديكور يحلل الآن...";
     box.style.display = "block";
-    box.innerHTML = `جاري التحليل...`;
-    try {
-        const reader = new FileReader();
-        reader.readAsDataURL(input.files[0]);
-        reader.onload = async (e) => {
-            const img = new Image();
-            img.src = e.target.result;
-            img.onload = async () => {
-                const canvas = document.createElement('canvas');
-                const MAX_WIDTH = 600; 
-                canvas.width = MAX_WIDTH; canvas.height = img.height * (MAX_WIDTH/img.width);
-                const ctx = canvas.getContext('2d');
-                ctx.drawImage(img, 0, 0, canvas.width, canvas.height);
-                const base64Data = canvas.toDataURL('image/jpeg', 0.6).split(',')[1];
-                const response = await fetch("https://shababek-ai.bilalmohammedsalem23.workers.dev", {
-                    method: 'POST',
-                    headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify({ image: base64Data })
-                });
-                const data = await response.json();
-                if (data.candidates) {
-                    if(avatar) avatar.src = "https://i.ibb.co/q3z1RscN/Neutral-removebg-preview.png";
-                    status.innerText = "وجدتها! إليك نصيحة دكتور ديكور:";
-                    box.innerHTML = `<div style="padding:15px; background:white; border-right:5px solid var(--gold);">${data.candidates[0].content.parts[0].text}</div>`;
-                    confetti({ particleCount: 150 });
-                }
-            };
-        };
-    } catch (e) { status.innerText = "خطأ في الاتصال!"; }
-}
+    box.innerHTML = `<div style="text-align:center; padding:20px;"><i class="fas fa-spinner fa-spin"></i> جاري قراءة تفاصيل الغرفة...</div>`;
 
+    try {
+        const file = input.files[0];
+        const reader = new FileReader();
+
+        // 3. قراءة الملف وتحويله إلى Image Object
+        const imageData = await new Promise((resolve, reject) => {
+            reader.onload = (e) => resolve(e.target.result);
+            reader.onerror = reject;
+            reader.readAsDataURL(file);
+        });
+
+        const img = new Image();
+        img.src = imageData;
+
+        await new Promise((resolve) => {
+            img.onload = resolve;
+        });
+
+        // 4. معالجة الصورة وتصغيرها لضمان سرعة الرفع (جوهري لشبكات العراق)
+        const canvas = document.createElement('canvas');
+        const MAX_WIDTH = 800; 
+        const scale = MAX_WIDTH / img.width;
+        canvas.width = MAX_WIDTH;
+        canvas.height = img.height * scale;
+
+        const ctx = canvas.getContext('2d');
+        ctx.drawImage(img, 0, 0, canvas.width, canvas.height);
+
+        // تحويل الصورة لـ Base64 مضغوط بجودة 70%
+        const base64Data = canvas.toDataURL('image/jpeg', 0.7).split(',')[1];
+
+        // 5. الاتصال بسيرفر شبابيك AI مع نظام Timeout
+        const controller = new AbortController();
+        const timeoutId = setTimeout(() => controller.abort(), 30000); // مهلة 30 ثانية
+
+        const response = await fetch("https://shababek-ai.bilalmohammedsalem23.workers.dev", {
+            method: 'POST',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify({ image: base64Data }),
+            signal: controller.signal
+        });
+
+        clearTimeout(timeoutId);
+        const data = await response.json();
+
+        // 6. عرض النتيجة النهائية
+        if (data && data.candidates && data.candidates[0].content.parts[0].text) {
+            if(avatar) avatar.src = "https://i.ibb.co/q3z1RscN/Neutral-removebg-preview.png";
+            status.innerText = "وجدتها! إليك نصيحة دكتور ديكور:";
+            box.innerHTML = `
+                <div style="padding:20px; border-radius:15px; background:#fff; border-right:6px solid var(--gold); box-shadow:0 10px 30px rgba(0,0,0,0.1); color:var(--brown); line-height:1.8; animation: slideUp 0.5s ease;">
+                    ${data.candidates[0].content.parts[0].text}
+                    <div style="margin-top:15px; border-top:1px solid #eee; pt-10px; font-size:0.8rem; color:var(--gold);">
+                        <i class="fas fa-magic"></i> تم التحليل بواسطة ذكاء شبابيك الاصطناعي
+                    </div>
+                </div>`;
+            confetti({ particleCount: 150, spread: 70, origin: { y: 0.6 } });
+        } else {
+            throw new Error("Invalid AI Response");
+        }
+
+    } catch (error) {
+        console.error("AI Error:", error);
+        if(avatar) avatar.src = "https://i.ibb.co/q3z1RscN/Neutral-removebg-preview.png";
+        status.innerText = "عذراً، دكتور ديكور واجه صعوبة!";
+        box.innerHTML = `
+            <div style="padding:15px; background:#fff1f1; border-radius:10px; color:red; text-align:center;">
+                <p>يبدو أن هناك ضغطاً على السيرفر أو ضعفاً في الإنترنت.</p>
+                <button onclick="location.reload()" style="background:var(--brown); color:white; border:none; padding:8px 15px; border-radius:5px; margin-top:10px; cursor:pointer;">محاولة أخرى</button>
+            </div>`;
+    }
+}
 // --- ٦. نظام السلة والبحث ---
 function addToCart() {
     const h = v('hIn');
