--- a/index.html
+++ b/index.html
@@ -462,42 +462,72 @@ function openCalc(p) {
 
 // --- ٥. دكتور ديكور (AI) ---
 async function handleDrImage(input) {
-    if (!input.files || !input.files[0]) return;
+    if (!input || !input.files || !input.files[0]) return;
+
     const box = document.getElementById('aiResponse');
     const avatar = document.getElementById('drAvatar');
     const status = document.getElementById('drStatus');
+
+    // تهيئة الواجهة
     if(avatar) avatar.src = "https://i.ibb.co/ZzMvg7Mz/Disgust-removebg-preview.png";
     status.innerText = "دكتور ديكور يحلل الآن...";
     box.style.display = "block";
-    box.innerHTML = `جاري التحليل...`;
+    box.innerHTML = `<div style="text-align:center; padding:20px;"><i class="fas fa-spinner fa-spin"></i> جاري إرسال الصورة للمختبر...</div>`;
+
     try {
-        const reader = new FileReader();
-        reader.readAsDataURL(input.files[0]);
-        reader.onload = async (e) => {
-            const img = new Image();
-            img.src = e.target.result;
-            img.onload = async () => {
-                const canvas = document.createElement('canvas');
-                const MAX_WIDTH = 600; 
-                canvas.width = MAX_WIDTH; canvas.height = img.height * (MAX_WIDTH/img.width);
-                const ctx = canvas.getContext('2d');
-                ctx.drawImage(img, 0, 0, canvas.width, canvas.height);
-                const base64Data = canvas.toDataURL('image/jpeg', 0.6).split(',')[1];
-                const response = await fetch("https://shababek-ai.bilalmohammedsalem23.workers.dev", {
-                    method: 'POST',
-                    headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify({ image: base64Data })
-                });
-                const data = await response.json();
-                if (data.candidates) {
-                    if(avatar) avatar.src = "https://i.ibb.co/q3z1RscN/Neutral-removebg-preview.png";
-                    status.innerText = "وجدتها! إليك نصيحة دكتور ديكور:";
-                    box.innerHTML = `<div style="padding:15px; background:white; border-right:5px solid var(--gold);">${data.candidates[0].content.parts[0].text}</div>`;
-                    confetti({ particleCount: 150 });
-                }
-            };
+        const file = input.files[0];
+        
+        // محرك معالجة الصور لضمان عدم تعليق التحليل
+        const processImage = (file) => {
+            return new Promise((resolve) => {
+                const reader = new FileReader();
+                reader.onload = (e) => {
+                    const img = new Image();
+                    img.onload = () => {
+                        const canvas = document.createElement('canvas');
+                        const MAX_WIDTH = 800; // حجم مثالي للذكاء الاصطناعي
+                        const scale = MAX_WIDTH / img.width;
+                        canvas.width = MAX_WIDTH;
+                        canvas.height = img.height * scale;
+                        const ctx = canvas.getContext('2d');
+                        ctx.drawImage(img, 0, 0, canvas.width, canvas.height);
+                        resolve(canvas.toDataURL('image/jpeg', 0.7).split(',')[1]);
+                    };
+                    img.src = e.target.result;
+                };
+                reader.readAsDataURL(file);
+            });
         };
-    } catch (e) { status.innerText = "خطأ في الاتصال!"; }
+
+        const base64Data = await processImage(file);
+
+        // إرسال الطلب للسيرفر (POST Request)
+        const response = await fetch("https://shababek-ai.bilalmohammedsalem23.workers.dev", {
+            method: 'POST',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify({ image: base64Data })
+        });
+
+        const data = await response.json();
+
+        if (data && data.candidates) {
+            // عرض النتيجة بنجاح
+            if(avatar) avatar.src = "https://i.ibb.co/q3z1RscN/Neutral-removebg-preview.png";
+            status.innerText = "وجدتها! إليك نصيحة دكتور ديكور:";
+            box.innerHTML = `
+                <div style="padding:20px; border-radius:15px; background:#fff; border-right:6px solid var(--gold); box-shadow:0 10px 30px rgba(0,0,0,0.1); color:var(--brown); line-height:1.8;">
+                    ${data.candidates[0].content.parts[0].text}
+                </div>`;
+            confetti({ particleCount: 150, spread: 70, origin: { y: 0.6 } });
+        } else {
+            throw new Error("Invalid AI Response");
+        }
+
+    } catch (error) {
+        console.error("AI Error:", error);
+        status.innerText = "عذراً، فشل التحليل!";
+        box.innerHTML = `<div style="color:red; text-align:center; padding:15px;">تأكد من قوة الإنترنت وحاول مرة أخرى.</div>`;
+    }
 }
 
 // --- ٦. نظام السلة والبحث ---
