--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         <ul class="nav-menu">
             <li><a onclick="showPage('homePage')">الرئيسية</a></li>
             <li><a onclick="showPage('homePage'); setTimeout(() => { document.getElementById('categories').scrollIntoView({behavior: 'smooth'}); }, 100);">المنتجات</a></li>
-            <li><a onclick="showPage('doctorPage')">دكتور ديكور</a></li>
+            <li><a href="ai.html">دكتور ديكور (AI)</a></li>
             <li><a onclick="showPage('paymentPage')">طرق الدفع</a></li>
             <li><a onclick="showPage('aboutPage')">من نحن</a></li>
             <li><a onclick="showPage('contactPage')">تواصل معنا</a></li>
