--- a/ai.html
+++ b/ai.html
@@ -56,16 +56,21 @@
     </header>
 
     <div class="nav-bar">
-        <ul class="nav-menu">
-            <li><a href="index.html">الرئيسية</a></li>
-            <li><a href="index.html#categories">المنتجات</a></li>
-            <li><a href="ai.html" style="color:var(--gold)">دكتور ديكور</a></li>
-            <li><a href="index.html#paymentPage">طرق الدفع</a></li>
-            <li><a href="index.html#aboutPage">من نحن</a></li>
-            <li><a href="index.html#contactPage">تواصل معنا</a></li>
-        </ul>
-    </div>
+    <ul class="nav-menu">
+        <li><a href="index.html">الرئيسية</a></li>
+        <li><a href="index.html?go=categories">المنتجات</a></li>
+        <li><a href="ai.html" style="color:var(--gold)">دكتور ديكور</a></li>
+        <li><a href="index.html#paymentPage">طرق الدفع</a></li>
+        <li><a href="index.html#aboutPage">من نحن</a></li>
+        <li><a href="index.html#contactPage">تواصل معنا</a></li>
+    </ul>
+</div>
 
+<div class="footer-cta">
+    <h2 style="margin-bottom: 15px;">جاهز لتجديد ستائر منزلك؟</h2>
+    <a href="https://wa.me/9647883002797" class="btn-footer" style="border: 1px solid rgba(255,255,255,0.4); color: white;">تواصل عبر واتساب</a>
+    <a href="index.html?go=categories" class="btn-footer" style="background: var(--gold); color: white;">تصفح المنتجات</a>
+</div>
     <main class="ai-hero">
         <div class="avatar-container">
             <img id="drAvatar" src="https://i.ibb.co/q3z1RscN/Neutral-removebg-preview.png">
