--- a/ai.html
+++ b/ai.html
@@ -12,7 +12,7 @@
     <style>
         :root { --gold: #d9b382; --brown: #3d2e24; --bg: #f9f6f2; --white: #ffffff; --whatsapp: #25D366; }
         * { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Cairo', sans-serif; }
-        body { background: var(--white); color: var(--brown); overflow-x: hidden; }
+        body { background: var(--white); color: var(--brown); overflow-x: hidden; line-height: 1.6; }
 
         /* الهيدر */
         .top-banner { background: var(--brown); color: white; padding: 10px 5%; text-align: center; font-size: 13px; display: flex; justify-content: space-between; align-items: center; }
@@ -30,12 +30,13 @@
         .avatar-container { width: 180px; height: 180px; background: white; border-radius: 50%; border: 4px solid var(--gold); margin-bottom: 25px; overflow: hidden; box-shadow: 0 10px 25px rgba(0,0,0,0.1); }
         #drAvatar { width: 100%; height: 100%; object-fit: contain; transition: 0.5s; }
         
-        .chat-bubble { background: white; padding: 25px; border-radius: 25px; border-right: 6px solid var(--gold); max-width: 600px; line-height: 1.8; box-shadow: 0 5px 15px rgba(0,0,0,0.05); margin-bottom: 30px; text-align: right; }
-        .btn-gold { background: var(--gold); color: white; border: none; padding: 18px 40px; border-radius: 12px; font-weight: 900; cursor: pointer; font-size: 1.1rem; width: 100%; max-width: 400px; }
+        .chat-bubble { background: white; padding: 25px; border-radius: 25px; border-right: 6px solid var(--gold); max-width: 600px; line-height: 1.8; box-shadow: 0 5px 15px rgba(0,0,0,0.05); margin-bottom: 30px; text-align: right; position: relative; }
+        .btn-gold { background: var(--gold); color: white; border: none; padding: 18px 40px; border-radius: 12px; font-weight: 900; cursor: pointer; font-size: 1.1rem; width: 100%; max-width: 400px; transition: 0.3s; }
+        .btn-gold:hover { background: var(--brown); transform: translateY(-3px); }
 
         /* الفوتر CTA */
         .footer-cta { background: var(--brown); color: white; padding: 40px 5%; text-align: center; border-radius: 40px 40px 0 0; margin-top: 50px; }
-        .btn-footer { padding: 10px 20px; border-radius: 8px; text-decoration: none; display: inline-block; font-weight: 600; margin: 5px; }
+        .btn-footer { padding: 10px 20px; border-radius: 8px; text-decoration: none; display: inline-block; font-weight: 600; margin: 5px; transition: 0.3s; }
 
         /* زر الواتساب العائم */
         .wa-float { position: fixed; bottom: 20px; right: 20px; background: #25D366; color: white; width: 60px; height: 60px; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-size: 30px; z-index: 9999; animation: pulse 2s infinite; }
@@ -56,21 +57,16 @@
     </header>
 
     <div class="nav-bar">
-    <ul class="nav-menu">
-        <li><a href="index.html">الرئيسية</a></li>
-        <li><a href="index.html?go=categories">المنتجات</a></li>
-        <li><a href="ai.html" style="color:var(--gold)">دكتور ديكور</a></li>
-        <li><a href="index.html#paymentPage">طرق الدفع</a></li>
-        <li><a href="index.html#aboutPage">من نحن</a></li>
-        <li><a href="index.html#contactPage">تواصل معنا</a></li>
-    </ul>
-</div>
+        <ul class="nav-menu">
+            <li><a href="index.html">الرئيسية</a></li>
+            <li><a href="index.html?go=categories">المنتجات</a></li>
+            <li><a href="ai.html" style="color:var(--gold)">دكتور ديكور</a></li>
+            <li><a href="index.html#paymentPage">طرق الدفع</a></li>
+            <li><a href="index.html#aboutPage">من نحن</a></li>
+            <li><a href="index.html#contactPage">تواصل معنا</a></li>
+        </ul>
+    </div>
 
-<div class="footer-cta">
-    <h2 style="margin-bottom: 15px;">جاهز لتجديد ستائر منزلك؟</h2>
-    <a href="https://wa.me/9647883002797" class="btn-footer" style="border: 1px solid rgba(255,255,255,0.4); color: white;">تواصل عبر واتساب</a>
-    <a href="index.html?go=categories" class="btn-footer" style="background: var(--gold); color: white;">تصفح المنتجات</a>
-</div>
     <main class="ai-hero">
         <div class="avatar-container">
             <img id="drAvatar" src="https://i.ibb.co/q3z1RscN/Neutral-removebg-preview.png">
@@ -87,7 +83,7 @@
     <div class="footer-cta">
         <h2 style="margin-bottom: 15px;">جاهز لتجديد ستائر منزلك؟</h2>
         <a href="https://wa.me/9647883002797" class="btn-footer" style="border: 1px solid rgba(255,255,255,0.4); color: white;">تواصل عبر واتساب</a>
-        <a href="index.html#categories" class="btn-footer" style="background: var(--gold); color: white;">تصفح المنتجات</a>
+        <a href="index.html?go=categories" class="btn-footer" style="background: var(--gold); color: white;">تصفح المنتجات</a>
     </div>
 
     <footer style="background: var(--brown); color: rgba(255,255,255,0.6); padding: 20px; text-align: center;">
@@ -133,6 +129,7 @@ async function analyzeRoom(input) {
                 }
             } catch (err) {
                 box.innerHTML = "عذراً، فشل الاتصال. حاول مرة أخرى.";
+                avatar.src = "https://i.ibb.co/q3z1RscN/Neutral-removebg-preview.png";
             }
         };
     };
