--- a/index.html
+++ b/index.html
@@ -241,7 +241,11 @@
                 <h2 style="margin-bottom:35px; font-weight:900;">لماذا شبابيك؟</h2>
                 <div class="features-grid">
                     <div class="f-card"><i class="fa-solid fa-shield-halved" style="color:var(--gold); font-size:2.2rem; margin-bottom:10px;"></i><h3>ضمان حقيقي</h3><p>أرقى الأقمشة بضمان رسمي.</p></div>
-                    <div class="f-card"><i class="fa-solid fa-truck-fast" style="color:var(--gold); font-size:2.2rem; margin-bottom:10px;"></i><h3>قياس منزلي</h3><p>نصلكم للقياس مجاناً.</p></div>
+                    <div class="f-card">
+    <i class="fa-solid fa-tools" style="color:var(--gold); font-size:2.2rem; margin-bottom:10px;"></i>
+    <h3>تركيب احترافي</h3>
+    <p>فريقنا المتخصص يضمن لك تركيباً متقناً ونظيفاً.</p>
+</div>
                     <div class="f-card"><i class="fa-solid fa-ruler-combined" style="color:var(--gold); font-size:2.2rem; margin-bottom:10px;"></i><h3>تفصيل دقيق</h3><p>خياطة احترافية حسب الطلب.</p></div>
                     <div class="f-card"><i class="fa-solid fa-palette" style="color:var(--gold); font-size:2.2rem; margin-bottom:10px;"></i><h3>ذوق رفيع</h3><p>أحدث الموديلات العصرية.</p></div>
                 </div>
