--- a/index.html
+++ b/index.html
@@ -190,6 +190,7 @@
             <li><a href="ai.html">دكتور ديكور (AI)</a></li>
             <li><a onclick="showPage('paymentPage')">طرق الدفع</a></li>
             <li><a onclick="showPage('aboutPage')">من نحن</a></li>
+            <li><a href="loyalty.html">نادي النقاط</a></li>
             <li><a onclick="showPage('contactPage')">تواصل معنا</a></li>
         </ul>
     </div>
