--- a/ai.html
+++ b/ai.html
@@ -62,6 +62,7 @@
             <li><a href="index.html?go=categories">المنتجات</a></li>
             <li><a href="ai.html" style="color:var(--gold)">دكتور ديكور</a></li>
             <li><a href="index.html#paymentPage">طرق الدفع</a></li>
+            <li><a href="loyalty.html">نادي النقاط</a></li>
             <li><a href="index.html#aboutPage">من نحن</a></li>
             <li><a href="index.html#contactPage">تواصل معنا</a></li>
         </ul>
