--- a/ai.html
+++ b/ai.html
@@ -1,139 +1,124 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>دكتور ديكور - شبابيك للستائر</title>
-    <link rel="icon" type="image/png" href="https://i.ibb.co/3y1ZNCk0/1.png">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700;900&display=swap" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>دكتور ديكور AI - شبابيك للستائر</title>
 
-    <style>
-        :root { --gold: #d9b382; --brown: #3d2e24; --bg: #f9f6f2; --white: #ffffff; --whatsapp: #25D366; }
-        * { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Cairo', sans-serif; }
-        body { background: var(--white); color: var(--brown); overflow-x: hidden; line-height: 1.6; }
+<link rel="icon" href="https://i.ibb.co/3y1ZNCk0/1.png">
 
-        /* الهيدر */
-        .top-banner { background: var(--brown); color: white; padding: 10px 5%; text-align: center; font-size: 13px; display: flex; justify-content: space-between; align-items: center; }
-        header { background: var(--white); padding: 10px 5%; display: flex; justify-content: space-between; align-items: center; position: sticky; top: 0; z-index: 1000; box-shadow: 0 4px 15px rgba(0,0,0,0.05); }
-        .logo-img { height: 80px; cursor: pointer; }
+<link rel="stylesheet"
+href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
-        /* الشريط الرئيسي */
-        .nav-bar { background: #fcfcfc; border-bottom: 1px solid #eee; padding: 12px 0; overflow-x: auto; white-space: nowrap; scrollbar-width: none; }
-        .nav-menu { display: inline-flex; gap: 25px; list-style: none; padding: 0 20px; }
-        .nav-menu a { text-decoration: none; color: var(--brown); font-weight: 700; font-size: 1rem; }
-        .nav-menu a:hover { color: var(--gold); }
-        
-        /* محتوى الذكاء الاصطناعي */
-        .ai-hero { background: var(--bg); padding: 60px 5%; text-align: center; min-height: 60vh; display: flex; flex-direction: column; align-items: center; }
-        .avatar-container { width: 180px; height: 180px; background: white; border-radius: 50%; border: 4px solid var(--gold); margin-bottom: 25px; overflow: hidden; box-shadow: 0 10px 25px rgba(0,0,0,0.1); }
-        #drAvatar { width: 100%; height: 100%; object-fit: contain; transition: 0.5s; }
-        
-        .chat-bubble { background: white; padding: 25px; border-radius: 25px; border-right: 6px solid var(--gold); max-width: 600px; line-height: 1.8; box-shadow: 0 5px 15px rgba(0,0,0,0.05); margin-bottom: 30px; text-align: right; position: relative; }
-        .btn-gold { background: var(--gold); color: white; border: none; padding: 18px 40px; border-radius: 12px; font-weight: 900; cursor: pointer; font-size: 1.1rem; width: 100%; max-width: 400px; transition: 0.3s; }
-        .btn-gold:hover { background: var(--brown); transform: translateY(-3px); }
+<link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700;900&display=swap"
+rel="stylesheet">
 
-        /* الفوتر CTA */
-        .footer-cta { background: var(--brown); color: white; padding: 40px 5%; text-align: center; border-radius: 40px 40px 0 0; margin-top: 50px; }
-        .btn-footer { padding: 10px 20px; border-radius: 8px; text-decoration: none; display: inline-block; font-weight: 600; margin: 5px; transition: 0.3s; }
+<script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 
-        /* زر الواتساب العائم */
-        .wa-float { position: fixed; bottom: 20px; right: 20px; background: #25D366; color: white; width: 60px; height: 60px; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-size: 30px; z-index: 9999; animation: pulse 2s infinite; }
-        @keyframes pulse { 0% { transform: scale(1); box-shadow: 0 0 0 0 rgba(37, 211, 102, 0.7); } 70% { transform: scale(1.1); box-shadow: 0 0 0 10px rgba(37, 211, 102, 0); } 100% { transform: scale(1); } }
-    </style>
-</head>
-<body>
+<style>
 
-    <div class="top-banner">
-        <span>دكتور ديكور - مستشارك الذكي من شبابيك</span>
-        <a href="https://wa.me/9647883002797" style="color:var(--whatsapp); text-decoration:none; font-weight:bold;"><i class="fab fa-whatsapp"></i> استشارة مباشرة</a>
-    </div>
-
-    <header>
-        <div style="font-weight:900; line-height:1;">شبابيك<br><span style="color:var(--gold); font-size:0.8rem;">للستائر</span></div>
-        <img src="https://i.ibb.co/3y1ZNCk0/1.png" class="logo-img" onclick="location.href='index.html'">
-        <div style="width: 50px;"></div> 
-    </header>
-
-    <div class="nav-bar">
-        <ul class="nav-menu">
-            <li><a href="index.html">الرئيسية</a></li>
-            <li><a href="index.html?go=categories">المنتجات</a></li>
-            <li><a href="ai.html" style="color:var(--gold)">دكتور ديكور</a></li>
-            <li><a href="index.html#paymentPage">طرق الدفع</a></li>
-            <li><a href="index.html#aboutPage">من نحن</a></li>
-            <li><a href="index.html#contactPage">تواصل معنا</a></li>
-        </ul>
-    </div>
-
-    <main class="ai-hero">
-        <div class="avatar-container">
-            <img id="drAvatar" src="https://i.ibb.co/q3z1RscN/Neutral-removebg-preview.png">
-        </div>
-        <div class="chat-bubble" id="aiResponse">
-            أهلاً بك! أنا دكتور ديكور. التقط صورة لغرفتك وسأقترح عليك الستارة المثالية التي تناسب أثاثك وألوان منزلك.
-        </div>
-        <input type="file" id="aiCamera" accept="image/*" capture="environment" style="display: none;" onchange="analyzeRoom(this)">
-        <button onclick="document.getElementById('aiCamera').click()" class="btn-gold">
-            <i class="fas fa-camera"></i> ابدأ الاستشارة الآن
-        </button>
-    </main>
-
-    <div class="footer-cta">
-        <h2 style="margin-bottom: 15px;">جاهز لتجديد ستائر منزلك؟</h2>
-        <a href="https://wa.me/9647883002797" class="btn-footer" style="border: 1px solid rgba(255,255,255,0.4); color: white;">تواصل عبر واتساب</a>
-        <a href="index.html?go=categories" class="btn-footer" style="background: var(--gold); color: white;">تصفح المنتجات</a>
-    </div>
-
-    <footer style="background: var(--brown); color: rgba(255,255,255,0.6); padding: 20px; text-align: center;">
-        <p>© 2026 جميع الحقوق محفوظة لشبابيك للستائر - ظل وذوق</p>
-    </footer>
-
-    <a href="https://wa.me/9647883002797" class="wa-float" target="_blank"><i class="fab fa-whatsapp"></i></a>
-
-<script>
-async function analyzeRoom(input) {
-    if (!input.files || !input.files[0]) return;
-    const box = document.getElementById('aiResponse');
-    const avatar = document.getElementById('drAvatar');
-
-    avatar.src = "https://i.ibb.co/ZzMvg7Mz/Disgust-removebg-preview.png"; 
-    box.innerHTML = `<i class="fas fa-spinner fa-spin"></i> جاري تحليل الغرفة، انتظر قليلاً...`;
-
-    const reader = new FileReader();
-    reader.readAsDataURL(input.files[0]);
-    reader.onload = async (e) => {
-        const img = new Image();
-        img.src = e.target.result;
-        img.onload = async () => {
-            const canvas = document.createElement('canvas');
-            const MAX_WIDTH = 600;
-            canvas.width = MAX_WIDTH;
-            canvas.height = img.height * (MAX_WIDTH / img.width);
-            const ctx = canvas.getContext('2d');
-            ctx.drawImage(img, 0, 0, canvas.width, canvas.height);
-            const base64Data = canvas.toDataURL('image/jpeg', 0.6).split(',')[1];
-
-            try {
-                const response = await fetch("https://shababek-ai.bilalmohammedsalem23.workers.dev", {
-                    method: 'POST',
-                    headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify({ image: base64Data })
-                });
-                const data = await response.json();
-                avatar.src = "https://i.ibb.co/q3z1RscN/Neutral-removebg-preview.png";
-                if (data && data.candidates) {
-                    box.innerHTML = data.candidates[0].content.parts[0].text;
-                    confetti({ particleCount: 150, spread: 70, origin: { y: 0.6 } });
-                }
-            } catch (err) {
-                box.innerHTML = "عذراً، فشل الاتصال. حاول مرة أخرى.";
-                avatar.src = "https://i.ibb.co/q3z1RscN/Neutral-removebg-preview.png";
-            }
-        };
-    };
+:root{
+--gold:#d9b382;
+--brown:#3d2e24;
+--bg:#f9f6f2;
+--white:#ffffff;
+--whatsapp:#25D366;
 }
-</script>
-</body>
-</html>
+
+*{
+box-sizing:border-box;
+margin:0;
+padding:0;
+font-family:'Cairo',sans-serif;
+}
+
+body{
+background:var(--white);
+color:var(--brown);
+}
+
+.top-banner{
+background:var(--brown);
+color:white;
+padding:10px 5%;
+display:flex;
+justify-content:space-between;
+align-items:center;
+font-size:13px;
+}
+
+header{
+background:white;
+padding:10px 5%;
+display:flex;
+justify-content:space-between;
+align-items:center;
+box-shadow:0 4px 15px rgba(0,0,0,0.05);
+}
+
+.logo-img{
+height:80px;
+cursor:pointer;
+}
+
+.nav-bar{
+background:#fcfcfc;
+border-bottom:1px solid #eee;
+padding:12px 0;
+}
+
+.nav-menu{
+display:flex;
+gap:25px;
+list-style:none;
+padding:0 20px;
+}
+
+.nav-menu a{
+text-decoration:none;
+color:var(--brown);
+font-weight:700;
+}
+
+.nav-menu a:hover{
+color:var(--gold);
+}
+
+.ai-hero{
+background:var(--bg);
+padding:60px 20px;
+text-align:center;
+min-height:70vh;
+display:flex;
+flex-direction:column;
+align-items:center;
+justify-content:center;
+}
+
+.avatar-container{
+
+width:170px;
+height:170px;
+background:white;
+border-radius:50%;
+border:4px solid var(--gold);
+overflow:hidden;
+box-shadow:0 10px 25px rgba(0,0,0,0.1);
+margin-bottom:25px;
+
+}
+
+#drAvatar{
+width:100%;
+height:100%;
+object-fit:contain;
+transition:0.4s;
+}
+
+.chat-bubble{
+
+background:white;
+padding:25px;
+border-radius:25px;
+border-right:6px solid var(--gold);
+max-width:600
